<resources>
    <string name="app_name">Tipy</string>
    <string name="user_photo">User Photo</string>
    <string name="title_activity_errand_map">Map</string>
    <string name="hello_developer">Hello Developer!</string>
    <string name="android_development_community">Android Development Community</string>
    <string name="login">Login</string>
    <string name="you_are_not_a_member_register">Are you new here ? <b><font fgcolor='#3CDA85'>Register.</font></b></string>
    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">24 000 0000</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="post">POST</string>
    <string name="post2">Post</string>
    <string name="loading_title">Loading</string>
    <string name="success_title">Success</string>
    <string name="try_again">Reconnect</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="post_hint">Say something ...</string>
    <string name="errand_hint">What would you like us to do</string>
    <string name="cancel_btn">Discards post</string>
    <string name="autofill_hint">A catchy post attracts more audience</string>
    <string name="people_around_you">to worlds first true Global village</string>
    <string name="get_connected">Get Connected !</string>
    <string name="message_signup">Setting up your info ...</string>>
    <string name="message_own_account">Been here before ? Login</string>
    <string name="signup">Sign up</string>


    <string name="email_title">Email</string>
    <string name="email_hint_title">example@email.com</string>
    <string name="password_title">Password</string>
    <string name="password_items_title">Password should be</string>
    <string name="p_item_1">At least 8 characters</string>
    <string name="p_item_2">Minimum one uppercase</string>
    <string name="p_item_3">Minimum one number</string>
    <string name="p_item_4">Minimum one symbol</string>
    <string name="email_error_text">The field is required</string>
    <string name="phone_error_text">The field is required</string>
    <string name="registration_title">REGISTER</string>
    <string name="name_placeholder">NAME</string>
    <string name="username_placeholder">\@name</string>
    <string name="post_placeholder">THIS IS A POST</string>
    <string name="edited">EDITED</string>
    <string name="fast_travel">Fast Travel </string>

    <string name="api_key">AIzaSyCQY7noge7FOYmbKVhwgPy-HSI_J_P08AU</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_choose_location">Map</string>

    <string name="Close">Close</string>
    <string name="Open">Open</string>

    <string name="finish_errand">Finish</string>
    <string name="share_subject">Join Tipy</string>
    <string name="invite_fried_via">Invite a friend via... </string>

    <string name="lets_help_society">Lets help society</string>
    <string name="and_get_paid_for_it">and get paid for it !</string>
    <string name="update_message">Update your app</string>
    <string name="update_description_msg">A new version of our app is available</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Quiz Q&A -->
    <string name="Q1">How do you prove to a customer that you are authorized to read their meter</string>
    <string name="Q1r">Show the customer your Certification Page</string>
    <string name="Q1w">Tell them you work with Tipy</string>

    <string name="Q2">What is the first thing to do after taking readings</string>
    <string name="Q2r">Close Meter Lid (if exists)</string>
    <string name="Q2w">Walk away</string>

    <string name="Q3">What do you do if you do not get access to an In-door meter to take data</string>
    <string name="Q3r">Drop the task</string>
    <string name="Q3w">Report reading as failed</string>

    <string name="Q4">When should you report a reading as Failed</string>
    <string name="Q4r">When the Water meter is physically damaged or is not at the GPS location</string>
    <string name="Q4w">When you want to remove that task from the list</string>

    <string name="Q5">The photo of the meter taken should contain :</string>
    <string name="Q5r">A clear view of the reading and the Meter number on the meter</string>
    <string name="Q5w">A picture of the meter</string>

    <string name="Q6">What do you do when Google directions shows arriving but meter is still not in sight</string>
    <string name="Q6r">Zoom into the follow your marker direction until you marker and location marker intersect</string>
    <string name="Q6w">Report as failed</string>

    <string name="Q7">what do you do when there are two meters at the same gps location</string>
    <string name="Q7r">Check their meter number or Click the view meter image button to see which meter you need to read</string>
    <string name="Q7w">Read any one of the two</string>

</resources>
