<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content"
    tools:context=".CommentActivity"
    android:id="@+id/comment_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/profile_photo"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginRight="20dp"
            app:placeholderImage="@drawable/egg"
            app:roundAsCircle="true" />

        <TextView
            android:id="@+id/tv_name_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:layout_toRightOf="@id/profile_photo"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_username_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:layout_toRightOf="@id/tv_name_comments"
            android:layout_marginLeft="10dp"
            android:textStyle="normal"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_tp_post_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_placeholder"
            android:layout_toRightOf="@id/profile_photo"
            android:layout_below="@id/tv_name_comments"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_tweet_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edited"
            android:layout_toRightOf="@id/profile_photo"
            android:layout_below="@id/tv_tp_post_comments"
            android:textStyle="normal"
            android:layout_marginTop="2dp"
            android:visibility="gone"
            android:textColor="@color/twitterBlueDarker"
            android:textSize="13sp"/>

        <RelativeLayout
            android:id="@+id/useful_btns"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_tp_post_comments"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/profile_photo"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recyclerview"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/useful_btns"
            android:layout_above="@+id/comment_et"/>

        <EditText
            android:id="@+id/comment_et"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:background="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:hint="Dont keep em waiting"/>

        <Button
            android:id="@+id/comment_post_btn"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:text="Post"
            android:textColor="@color/colorAccent"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"/>
    </RelativeLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>