<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cancelbtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:contentDescription="@string/cancel_btn"
            android:onClick="cancelPost"
            android:src="@drawable/ic_cancel" />

        <androidx.cardview.widget.CardView
            android:layout_width="82dp"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="22.5dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/cPostBtn"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/post2"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/resizableEditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/post_hint"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:lines="8"
            android:maxLines="10"
            android:maxLength="120"
            android:scrollbars="vertical"/>

    </RelativeLayout>





</androidx.core.widget.NestedScrollView>