<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".HomeActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/tplogolarge"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/hello_developer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/update_message"
                android:textColor="@color/colorTitle"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/subtitle_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hello_developer_text_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:paddingLeft="5dp"
                android:ellipsize="end"
                android:text="@string/update_description_msg"
                android:textColor="@color/colorTitle"
                android:textSize="15sp"
                android:layout_marginLeft="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:id="@+id/getstarted"
                android:layout_height="45dp"
                android:layout_below="@+id/subtitle_text_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp"
                android:layout_marginLeft="15dp">

                <RelativeLayout
                    android:id="@+id/update_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/update"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_below="@+id/getstarted"
                android:src="@drawable/update"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>